change page title

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React World Map</title>
+    <title>Taro Arms-Tracker</title>
   </head>
   <body>
     <div id="root"></div>
